idea edit is now complete

--- a/app/templates/notes/note.hbs
+++ b/app/templates/notes/note.hbs
@@ -2,4 +2,6 @@
   <h3>{{model.id}}</h3>
 
   <p>{{model.content}}</p>
+  {{textarea value=model.content }}
+  {{#if model.hasDirtyAttributes}}<button{{action 'saveNote' on="click"}}>Save</button>{{/if}}
 </div>
