--- a/app/templates/notes/note.hbs
+++ b/app/templates/notes/note.hbs
@@ -4,4 +4,5 @@
   <p>{{model.content}}</p>
   {{textarea value=model.content }}
   {{#if model.hasDirtyAttributes}}<button{{action 'saveNote' on="click"}}>Save</button>{{/if}}
+  <button {{action 'removeNote' on='click'}}>delete</button>
 </div>
