--- a/app/templates/notes/note.hbs
+++ b/app/templates/notes/note.hbs
@@ -1,8 +1,11 @@
 <div class="note-content">
   <h3>{{model.id}}</h3>
   <p>{{model.content}}</p>
-  {{textarea value=model.content }}
+  {{textarea value=model.content}}
   <br/>
   {{#if model.hasDirtyAttributes}}<button{{action 'saveNote' on="click"}} class="btn btn-default" >Save</button>{{/if}}
   <button {{action 'removeNote' on='click'}} class="btn btn-negative">delete</button>
+
+  <h4>Markdown Preview</h4>
+  {{markdown-to-html markdown=model.content}}
 </div>
