--- a/app/templates/notes.hbs
+++ b/app/templates/notes.hbs
@@ -11,7 +11,7 @@
             {{#if newNoteTitle}}<button{{action 'createNote'}}>Create</button>{{/if}}
           </li>
         </ul>
-      <div class="note-list">
+      <div class="note-list list-group-item">
         {{note-list notes=model}}
       </div>
     </div>
